// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-compliance - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Comprehensive Azure compliance and security auditing capabilities including best practices assessment, Key Vault expiration monitoring, and resource configuration validation. WHEN: compliance scan, security audit, azqr, Azure best practices, Key Vault expiration check, compliance assessment, resource review, configuration validation, expired certificates, expiring secrets, orphaned resources, policy compliance, security posture evaluation.",
  "extractedKeywords": [
    "assessment",
    "audit",
    "auditing",
    "authentication",
    "azqr",
    "azure",
    "best",
    "capabilities",
    "certificates",
    "check",
    "compliance",
    "comprehensive",
    "configuration",
    "evaluation",
    "expiration",
    "expired",
    "expiring",
    "including",
    "key vault",
    "keyvault",
    "mcp",
    "monitor",
    "monitoring",
    "orphaned",
    "policy",
    "posture",
    "practices",
    "resource",
    "resources",
    "review",
    "scan",
    "secrets",
    "security",
    "validation",
    "vault",
    "when",
  ],
  "name": "azure-compliance",
}
`;

exports[`azure-compliance - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "assessment",
  "audit",
  "auditing",
  "authentication",
  "azqr",
  "azure",
  "best",
  "capabilities",
  "certificates",
  "check",
  "compliance",
  "comprehensive",
  "configuration",
  "evaluation",
  "expiration",
  "expired",
  "expiring",
  "including",
  "key vault",
  "keyvault",
  "mcp",
  "monitor",
  "monitoring",
  "orphaned",
  "policy",
  "posture",
  "practices",
  "resource",
  "resources",
  "review",
  "scan",
  "secrets",
  "security",
  "validation",
  "vault",
  "when",
]
`;
